; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiTexUtil.c_raspitexutil_gl_init_2_0.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiTexUtil.c_raspitexutil_gl_init_2_0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@EGL_RED_SIZE = common dso_local global i32 0, align 4
@EGL_GREEN_SIZE = common dso_local global i32 0, align 4
@EGL_BLUE_SIZE = common dso_local global i32 0, align 4
@EGL_ALPHA_SIZE = common dso_local global i32 0, align 4
@EGL_DEPTH_SIZE = common dso_local global i32 0, align 4
@EGL_RENDERABLE_TYPE = common dso_local global i32 0, align 4
@EGL_OPENGL_ES2_BIT = common dso_local global i32 0, align 4
@EGL_NONE = common dso_local global i32 0, align 4
@EGL_CONTEXT_CLIENT_VERSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@VCOS_FUNCTION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @raspitexutil_gl_init_2_0(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca [13 x i32], align 16
  %6 = alloca [3 x i32], align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %4, align 8
  %10 = getelementptr inbounds [13 x i32], [13 x i32]* %5, i64 0, i64 0
  %11 = load i32, i32* @EGL_RED_SIZE, align 4
  store i32 %11, i32* %10, align 4
  %12 = getelementptr inbounds i32, i32* %10, i64 1
  store i32 8, i32* %12, align 4
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  %14 = load i32, i32* @EGL_GREEN_SIZE, align 4
  store i32 %14, i32* %13, align 4
  %15 = getelementptr inbounds i32, i32* %13, i64 1
  store i32 8, i32* %15, align 4
  %16 = getelementptr inbounds i32, i32* %15, i64 1
  %17 = load i32, i32* @EGL_BLUE_SIZE, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds i32, i32* %16, i64 1
  store i32 8, i32* %18, align 4
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* @EGL_ALPHA_SIZE, align 4
  store i32 %20, i32* %19, align 4
  %21 = getelementptr inbounds i32, i32* %19, i64 1
  store i32 8, i32* %21, align 4
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = load i32, i32* @EGL_DEPTH_SIZE, align 4
  store i32 %23, i32* %22, align 4
  %24 = getelementptr inbounds i32, i32* %22, i64 1
  store i32 16, i32* %24, align 4
  %25 = getelementptr inbounds i32, i32* %24, i64 1
  %26 = load i32, i32* @EGL_RENDERABLE_TYPE, align 4
  store i32 %26, i32* %25, align 4
  %27 = getelementptr inbounds i32, i32* %25, i64 1
  %28 = load i32, i32* @EGL_OPENGL_ES2_BIT, align 4
  store i32 %28, i32* %27, align 4
  %29 = getelementptr inbounds i32, i32* %27, i64 1
  %30 = load i32, i32* @EGL_NONE, align 4
  store i32 %30, i32* %29, align 4
  %31 = getelementptr inbounds [3 x i32], [3 x i32]* %6, i64 0, i64 0
  %32 = load i32, i32* @EGL_CONTEXT_CLIENT_VERSION, align 4
  store i32 %32, i32* %31, align 4
  %33 = getelementptr inbounds i32, i32* %31, i64 1
  store i32 2, i32* %33, align 4
  %34 = getelementptr inbounds i32, i32* %33, i64 1
  %35 = load i32, i32* @EGL_NONE, align 4
  store i32 %35, i32* %34, align 4
  %36 = load i32*, i32** %4, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %40, label %38

38:                                               ; preds = %1
  %39 = getelementptr inbounds [13 x i32], [13 x i32]* %5, i64 0, i64 0
  store i32* %39, i32** %4, align 8
  br label %40

40:                                               ; preds = %38, %1
  %41 = load i32, i32* @VCOS_FUNCTION, align 4
  %42 = call i32 @vcos_log_trace(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %41)
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %44 = load i32*, i32** %4, align 8
  %45 = getelementptr inbounds [3 x i32], [3 x i32]* %6, i64 0, i64 0
  %46 = call i32 @raspitexutil_gl_common(%struct.TYPE_5__* %43, i32* %44, i32* %45)
  store i32 %46, i32* %3, align 4
  %47 = load i32, i32* %3, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %40
  br label %53

50:                                               ; preds = %40
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %52 = call i32 @raspitexutil_create_textures(%struct.TYPE_5__* %51)
  store i32 %52, i32* %3, align 4
  br label %53

53:                                               ; preds = %50, %49
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i32 @vcos_log_trace(i8*, i32) #1

declare dso_local i32 @raspitexutil_gl_common(%struct.TYPE_5__*, i32*, i32*) #1

declare dso_local i32 @raspitexutil_create_textures(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
